fix: fix comments spacing (#213)

--- a/website/css/comments.css
+++ b/website/css/comments.css
@@ -449,7 +449,7 @@
 .comment-content p {
   margin: 0;
   word-wrap: break-word;
-  line-height: 0.5rem;
+  line-height: 1rem;
 }
 
 /* Back Button */
